CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2007 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$


2007.December.4 (0.9.19)
  * Localization Updates:
    ---------------------
    * Danish translation
      Joe Hansen <joedalton2@yahoo.dk>

  * System-Related Improvements:
    ----------------------------
    * Removed unfinished, unused record and playback code.

  * Documentation Improvements:
    ---------------------------
    * Brought documentation on Tux Paint canvas size up-to-date, for
      importing photos/etc.

  * Build System Improvements
    -------------------------
    * Cleaned up some BeOS-related things; disabling SVG and Pango for BeOS.

  * Bug Fixes
    ---------
    * Corrected bug where Shift and Kaleidoscope magic tools would crash
      when sound was disabled.

    * Corrected issues that prevented building Tux Paint without sound
      support (extraneous SDL_mixer library calls).


2007.November.17 (0.9.18)
  * Interface Improvements:
    -----------------------
    * Improved 'New' and 'Open' interface:
      + 'Open' dialog no longer includes 'Starter' images
      + 'New' now brings up a selection dialog showing 'Starter' images
        and color choices
      + New images can be given solid background colors
        (which the 'Eraser' tool erases to)

    * Sped up prompt animations, and made them 'fly' from their sources
      (e.g., quit confirmation flies from Quit button), when possible.

    * Center image of directional brushes shown.
      (SourceForge.net Bug #1658697)

    * Windows shows printer configuration dialog even when in fullscreen mode.
      If no 'print.cfg' file is found, the dialog is shown.
      Clicking "Cancel" in the printer config. dialog cancels Tux Paint's
      print attempt.
      John Popplewell <john@johnnypops.demon.co.uk>

  * Tool Improvements:
    ------------------